--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 
       <!-- Desktop Nav (new!) -->
     <nav class="hidden md:flex gap-4 ml-8 items-center">
-      <a href="dashboard.html" class="text-brand hover:underline font-poppins font-semibold">Dashboard</a>
+      <a href="index.html" class="text-brand hover:underline font-poppins font-semibold">Dashboard</a>
       <a href="profile.html" class="text-brand hover:underline font-poppins font-semibold">Academics</a>
       <a href="attendance.html" class="text-brand hover:underline font-poppins font-semibold">Attendance</a>
       <a href="result.html" class="text-brand hover:underline font-poppins font-semibold">Results</a>
-      <a href="#fee" class="text-brand hover:underline font-poppins font-semibold">Fees</a>
+      <a href="fee.html" class="text-brand hover:underline font-poppins font-semibold">Fees</a>
       <a href="timetable.html" class="text-brand hover:underline font-poppins font-semibold">Timetable</a>
       <a href="notice.html" class="text-brand hover:underline font-poppins font-semibold">Announcements</a>
       <a href="profile.html" class="text-brand hover:underline font-poppins font-semibold">Settings</a>
@@ -681,3 +681,4 @@
   
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'982217ef63799aa7',t:'MTc1ODM3OTM4OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
